# falcondb

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_ar.md  ARCHITECTURE_de.md  ARCHITECTURE_es.md  ARCHITECTURE_fr.md  ARCHITECTURE_it.md  ARCHITECTURE_ja.md  ARCHITECTURE_ko.md  ARCHITECTURE_ms.md  ARCHITECTURE_pt.md  ARCHITECTURE_zh.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  README_CN.md  README_ar.md  README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_ms.md  README_pt.md  README_zh.md  build_cluster.txt  check_ct.rs  check_err.txt  check_tmp.txt  clippy_nursery.txt  clippy_nursery2.txt  deny.toml  diagnostic_test_queries.txt  docker-compose.yml  falcon.toml  (+7 more)
clients/falcondb-python/: COMPAT_MATRIX.md  README.md  pyproject.toml
clients/falcondb-python/tests/: test_errors.py  test_integration.py  test_wire.py
crates/cedar_bench/: Cargo.toml
crates/cedar_bench/src/: main.rs
crates/cedar_cluster/: Cargo.toml  build.rs
crates/cedar_cluster/examples/: failover_exercise.rs
crates/cedar_cluster/src/: grpc_transport.rs  ha.rs  lib.rs  query_engine.rs  rebalancer.rs  sharded_engine.rs  sharding.rs  tests.rs  two_phase.rs
crates/cedar_cluster/tests/: failover.rs
crates/cedar_executor/: Cargo.toml
crates/cedar_executor/src/: eval.rs  executor.rs  executor_aggregate.rs  executor_copy.rs  executor_dml.rs  executor_join.rs  executor_query.rs  executor_setops.rs  executor_subquery.rs  executor_window.rs  expr_engine.rs  external_sort.rs  parallel.rs  param_subst.rs  tests.rs  vectorized.rs
crates/cedar_protocol_pg/: Cargo.toml
crates/cedar_protocol_pg/src/: codec.rs  connection_pool.rs  handler.rs  handler_catalog.rs  handler_show.rs  lib.rs  plan_cache.rs  server.rs  session.rs
crates/cedar_raft/: Cargo.toml
crates/cedar_raft/src/: lib.rs  store.rs  types.rs
crates/cedar_server/: Cargo.toml
crates/cedar_server/src/: health.rs  main.rs
crates/cedar_server/tests/: sql_basic.rs  sql_conflict.rs  sql_coverage.rs  sql_dml.rs  sql_extensions.rs  sql_functions.rs  sql_generated_part1.rs  sql_generated_part2.rs  sql_generated_part3.rs  txn_local.rs
crates/falcon_bench/: Cargo.toml
crates/falcon_bench/src/: dataset.rs  lib.rs  main.rs  metrics.rs  regression.rs  runner.rs  workload.rs
crates/falcon_cluster/: Cargo.toml
crates/falcon_cluster/examples/: failover_exercise.rs
crates/falcon_cluster/src/: admission.rs  ai_ops.rs  bg_supervisor.rs  circuit_breaker.rs  client_discovery.rs  cluster_lifecycle.rs  cluster_ops.rs  control_plane.rs  cost_capacity.rs  cross_shard.rs  determinism_hardening.rs  deterministic_2pc.rs  dist_hardening.rs  distributed_enhancements.rs  distributed_ssi.rs  enterprise_ops.rs  enterprise_security.rs  failover_txn_hardening.rs  failover_txn_tests.rs  fault_injection.rs  follower_read.rs  ga_hardening.rs  gateway.rs  grpc_transport.rs  ha.rs  indoubt_resolver.rs  lib.rs  node_liveness.rs  parallel_2pc.rs  query_engine.rs  raft_integration.rs  raft_rebalance.rs  range_split.rs  read_restart.rs  rebalancer.rs  security_hardening.rs  segment_streaming.rs  self_healing.rs  sharded_engine.rs  sharding.rs  (+8 more)
crates/falcon_cluster/tests/: consistency_replication.rs  cross_shard_bench.rs  cross_shard_chaos.rs  cross_shard_hardened.rs  dist_hardening_integration.rs  distributed_enhancements_integration.rs  enterprise_compliance.rs  failover.rs  failover_determinism.rs  ga_soak_test.rs  gateway_pressure.rs  gateway_stability.rs  grpc_transport_e2e.rs  m2_multinode_e2e.rs  raft_grpc_multiprocess_e2e.rs  rebalancer_chaos.rs  replication_integrity.rs  rpo_zero_semisync.rs  segment_streaming_integration.rs  self_healing_chaos.rs  smart_gateway_client.rs  smart_gateway_scale.rs
crates/falcon_common/: Cargo.toml
crates/falcon_common/benches/: bench_datum.rs
crates/falcon_common/src/: bg_supervisor.rs  cloud.rs  compat.rs  config.rs  consistency.rs  crash_domain.rs  datum.rs  diag_bundle.rs  edition.rs  error.rs  globals.rs  hlc.rs  kernel.rs  lib.rs  lock_metrics.rs  request_context.rs  rls.rs  schema.rs  security.rs  shutdown.rs  tenant.rs  types.rs
crates/falcon_enterprise/: Cargo.toml
crates/falcon_enterprise/src/: control_plane.rs  enterprise_ops.rs  enterprise_security.rs  lib.rs
crates/falcon_executor/: Cargo.toml
crates/falcon_executor/src/: enterprise.rs  eval.rs  executor.rs  executor_aggregate.rs  executor_columnar.rs  executor_copy.rs  executor_dml.rs  executor_join.rs  executor_query.rs  executor_setops.rs  executor_subquery.rs  executor_window.rs  expr_engine.rs  external_sort.rs  fts.rs  governor.rs  hash_join_spill.rs  lib.rs  oltp_classifier.rs  oltp_executor.rs  parallel.rs  param_subst.rs  plpgsql.rs  prepared_stmt.rs  priority_scheduler.rs  row_stream.rs  tests.rs  tests_expr.rs  vectorized.rs
crates/falcon_executor/tests/: enum_type_columnar_tests.rs  fts_integration.rs  partition_table_tests.rs  plpgsql_integration.rs  rbac_enforcement_matrix.rs  rls_enforcement_tests.rs  spill_pressure.rs  trigger_integration.rs
crates/falcon_observability/: Cargo.toml
crates/falcon_observability/src/: lib.rs  stmt_stats.rs
crates/falcon_raft/: Cargo.toml
crates/falcon_raft/src/: lib.rs  network.rs  server.rs  store.rs  types.rs
crates/falcon_raft/tests/: raft_core.rs  transport_grpc.rs
crates/falcon_server/: Cargo.toml  build.rs
crates/falcon_server/src/: config_migrate.rs  doctor.rs  health.rs  main.rs  shutdown.rs
crates/falcon_server/tests/: shutdown_integration.rs  sql_basic.rs  sql_conflict.rs  sql_distributed_txn.rs  sql_dml.rs  sql_extensions.rs  sql_functions.rs  sql_generated_part1.rs  sql_generated_part2.rs  sql_generated_part3.rs  txn_local.rs
crates/falcon_sql_frontend/: Cargo.toml
crates/falcon_sql_frontend/benches/: bench_parser.rs
crates/falcon_sql_frontend/src/: binder.rs  binder_expr.rs  binder_select.rs  lib.rs  normalize.rs  param_env.rs  resolve_function.rs  tests.rs  types.rs  (+2 more)
crates/falcon_storage/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_pg_codec.rs  fuzz_sql_parser.rs
(+928 files in other folders)
