[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falcondb"
version = "0.2.0"
description = "Python SDK for FalconDB — native protocol driver with HA failover"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
keywords = ["falcondb", "database", "driver", "oltp"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
where = ["src"]
