[package]
name = "cedar_bench"
version.workspace = true
edition.workspace = true

[dependencies]
cedar_common = { path = "../cedar_common" }
cedar_cluster = { path = "../cedar_cluster" }
cedar_storage = { path = "../cedar_storage" }
cedar_txn = { path = "../cedar_txn" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
