[package]
name = "cedar_raft"
version.workspace = true
edition.workspace = true

[dependencies]
cedar_common = { path = "../cedar_common" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tracing.workspace = true
thiserror.workspace = true
openraft.workspace = true
parking_lot.workspace = true
