[package]
name = "cedar_server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cedar"
path = "src/main.rs"

[dependencies]
cedar_common = { path = "../cedar_common" }
cedar_storage = { path = "../cedar_storage" }
cedar_txn = { path = "../cedar_txn" }
cedar_executor = { path = "../cedar_executor" }
cedar_protocol_pg = { path = "../cedar_protocol_pg" }
cedar_observability = { path = "../cedar_observability" }
cedar_cluster = { path = "../cedar_cluster" }
cedar_raft = { path = "../cedar_raft" }
cedar_sql_frontend = { path = "../cedar_sql_frontend" }
cedar_planner = { path = "../cedar_planner" }
tokio.workspace = true
tonic.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
toml.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
