[package]
name = "falcon_executor"
version.workspace = true
edition.workspace = true

[features]
columnstore = ["falcon_storage/columnstore"]

[dependencies]
falcon_common = { path = "../falcon_common" }
falcon_storage = { path = "../falcon_storage" }
falcon_txn = { path = "../falcon_txn" }
falcon_planner = { path = "../falcon_planner" }
falcon_sql_frontend = { path = "../falcon_sql_frontend" }
sqlparser.workspace = true
tracing.workspace = true
parking_lot.workspace = true
indexmap.workspace = true
dashmap.workspace = true
chrono.workspace = true
regex.workspace = true
md-5.workspace = true
sha2.workspace = true
base64.workspace = true
serde_json.workspace = true
bincode.workspace = true
smallvec.workspace = true
