[package]
name = "falcon_observability"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
chrono.workspace = true
parking_lot.workspace = true
falcon_common = { path = "../falcon_common" }
