[package]
name = "falcon_sql_frontend"
version.workspace = true
edition.workspace = true

[dependencies]
falcon_common = { path = "../falcon_common" }
sqlparser.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1"
criterion.workspace = true

[[bench]]
name = "bench_parser"
harness = false
